# minirt_game

./: .gitignore  CMakeLists.txt  README.md  christmasout.ppm  leaderboard.yaml  out.ppm  settings.yaml
inc/: AABB.hpp  AMenu.hpp  Application.hpp  BVH.hpp  Beam.hpp  BeamSource.hpp  BeamTarget.hpp  Button.hpp  ButtonsCluster.hpp  Camera.hpp  Collision.hpp  ColorUtils.hpp  CommandLine.hpp  Cone.hpp  Config.hpp  Cube.hpp  CustomCharacter.hpp  Cylinder.hpp  GameSession.hpp  Hittable.hpp  HowToPlayMenu.hpp  Laser.hpp  Leaderboard.hpp  LeaderboardMenu.hpp  LevelFinishedMenu.hpp  LightMarker.hpp  LightRay.hpp  MainMenu.hpp  MapSaver.hpp  Parser.hpp  PauseMenu.hpp  Plane.hpp  Ray.hpp  Renderer.hpp  Scene.hpp  SessionProgress.hpp  Settings.hpp  SettingsMenu.hpp  SettingsSection.hpp  Slider.hpp  (+6 more)
include/rt/: AABB.h  AABB.hpp  BVH.h  BVH.hpp  Beam.h  Beam.hpp  BeamSource.hpp  Camera.h  Collision.hpp  Cone.h  Cone.hpp  Config.hpp  Cube.hpp  Cylinder.h  Cylinder.hpp  Hittable.h  Hittable.hpp  HoledSphere.hpp  Laser.hpp  LightRay.hpp  Mat4.hpp  Parser.h  Parser.hpp  Plane.h  Plane.hpp  Ray.h  Ray.hpp  Renderer.h  Renderer.hpp  Scene.h  Scene.hpp  Sphere.h  Sphere.hpp  Vec3.h  Vec3.hpp  light.h  light.hpp  material.h  material.hpp
scenes/: big_balls.rt  big_shiny_ball.rt  box.rt  box_1.rt  christmas.rt  cone_and_ball.rt  cones.rt  inside_cylinder.rt  inside_sphere.rt  jp2.rt  level.toml  level_1.rt  level_1.toml  level_2.rt  level_2.toml  level_3.toml  level_4.toml  one_cone.rt  planes_shadows.rt  planes_shadows_rot.rt  rotated_plane.rt  smile.rt  space.rt  test.rt  tutorial_1.toml  tutorial_2.toml  tutorial_3.toml  tutorial_4.toml
src/: AABB.cpp  AMenu.cpp  Application.cpp  BVH.cpp  Beam.cpp  BeamSource.cpp  BeamTarget.cpp  ButtonsCluster.cpp  Camera.cpp  Collision.cpp  CommandLine.cpp  Cone.cpp  Cube.cpp  CustomCharacter.cpp  Cylinder.cpp  Hittable.cpp  HoledSphere.cpp  HowToPlayMenu.cpp  Laser.cpp  Leaderboard.cpp  LeaderboardMenu.cpp  LevelFinishedMenu.cpp  LightRay.cpp  MainMenu.cpp  MapSaver.cpp  Mat4.cpp  Parser.cpp  PauseMenu.cpp  Plane.cpp  Ray.cpp  Renderer.cpp  Scene.cpp  SessionProgress.cpp  Settings.cpp  SettingsMenu.cpp  SettingsSection.cpp  Slider.cpp  Sphere.cpp  Texture.cpp  TextureUtils.cpp  (+4 more)
tests/: CollisionTests.cpp
textures/: checker.xpm  simple.xpm
